<resources>
    <string name="app_name">BookStore Stage 2</string>

    <string name="empty_view_title_text">Your library is empty...</string>
    <string name="empty_view_subtitle_text">Add some books by clicking the + button!</string>
    <string name="title_activity_details">Book details</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="edit_text_title">Title</string>
    <string name="hint_text_title">title of book</string>
    <string name="edit_text_price">Price</string>
    <string name="hint_text_price">price of product</string>
    <string name="edit_text_quantity">Quantity</string>
    <string name="hint_text_quantity">enter quantity here</string>
    <string name="edit_text_supplier_name">Supplier</string>
    <string name="hint_supplier_name">enter the suppliers name</string>
    <string name="edit_text_suppliers_phone">Supplier  phone</string>
    <string name="hint_supplier_phone">enter phone number</string>
    <string name="add_activity_title">Add a book</string>
    <string name="insert_book_failed">Error.Failed to add Book</string>
    <string name="insert_book_success">Book added to database</string>
    <string name="discard">Discard</string>
    <string name="continue_insert">Continue inserting data</string>
    <string name="unsaved_book">Book is not saved.Exit screen?</string>
    <string name="unsaved_changes">Your data is not saved.Do you want to quit?</string>
    <string name="details_activity_title">Book details</string>
    <string name="edited_book_failed">Book data edit failed</string>
    <string name="edited_book_success">Book data saved</string>
    <string name="quantity_change_text_view">Quantity set</string>
    <string name="edit_text_delete_book">Delete book</string>
    <string name="edit_text_title_empty">Please enter a title</string>
    <string name="edit_text_title_maximum_characters">Maximum title lenght is 25 characters</string>
    <string name="price_not_allowed_msg">Invalid Price!</string>
    <string name="price_maximum_msg">Price maximum is 100</string>
    <string name="supplier_name_max_25_char_msg">Supplier name 25 characters maximum</string>
    <string name="supplier_phone_10_digits_msg">Supplier phone must have 10 digits</string>
    <string name="supplier_phone_empty_msg">Please enter supplier\'s phone</string>
    <string name="supplier_name_empty_msg">Please enter a name for Supplier</string>
    <string name="quantity_not_empty_msg">Please enter a quantity between :</string>
    <string name="delete_dialog_msg">Are you sure to delete book?</string>
    <string name="delete_button">Delete</string>
    <string name="cancel_delete">Cancel</string>
    <string name="delete_book_fail">Failed to delete entry</string>
    <string name="delete_book_ok">Book deleted successfuly</string>
    <string name="price_minimum_msg">Price must be at least 1</string>
    <string name="quantity_limits_msg">Quantity must be 0-100 pcs</string>
    <string name="edit_text_edit_book">Edit book details</string>
    <string name="edit_activity_title">Edit Book details</string>
    <string name="no_books_available">No books available!</string>
    <string name="book_sold">Book sold!</string>
    <string name="book_did_not_sold">Error in transaction</string>
    <string name="quantity_increased">Quantity increased</string>
    <string name="quantity_decreased">Quantity decreased</string>
    <string name="quantity_maximum_message">Maximum quantity is 100 pcs  </string>
    <string name="quantity_minimum_message">Minimum quantity is 0 pcs  </string>
    <string name="quantity_not_updated">Error in quantity change</string>
    <string name="no_data_to_save">No data to save</string>
    <string name="edit_button">Edit</string>
    <string name="Permission_to_phone_call_needed">Permission to phone call needed</string>
<string name="call_canceled">Call canceled due to access restriction</string>
</resources>
