<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/edit_text_title"
            />
        <!-- Name field -->
        <EditText
            android:maxLength="25"
            android:id="@+id/edit_book_title"
            android:hint="@string/hint_text_title"
            android:inputType="textCapCharacters"
            style="@style/EditorFieldStyle" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/edit_text_price"
            />
        <!-- Name field -->
        <EditText
            android:maxLength="3"
            android:id="@+id/edit_book_price"
            android:hint="@string/hint_text_price"
            android:inputType="number"
            style="@style/EditorFieldStyle" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/edit_text_quantity"
            />
        <!-- Name field -->
        <EditText
            android:maxLength="3"
            android:id="@+id/edit_book_quantity"
            android:hint="@string/hint_text_quantity"
            android:inputType="number"
            style="@style/EditorFieldStyle" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/edit_text_supplier_name"
            />
        <!-- Name field -->
        <EditText
            android:maxLength="25"
            android:id="@+id/edit_supplier_name"
            android:hint="@string/hint_supplier_name"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/edit_text_suppliers_phone"
            />
        <!-- Name field -->
        <EditText
            android:maxLength="10"
            android:id="@+id/edit_supplier_phone"
            android:hint="@string/hint_supplier_phone"
            android:inputType="phone"
            style="@style/EditorFieldStyle" />


    </LinearLayout>
</LinearLayout>

