<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".AddActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:orientation="vertical">

        <!-- Label -->
        <TextView
            style="@style/font_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_text_title" />
        <!-- Name field -->
        <EditText

            android:id="@+id/edit_book_title"
            style="@style/EditorFieldStyle"
            android:layout_width="280dp"
            android:layout_marginRight="@dimen/marginRight"
            android:hint="@string/hint_text_title"
            android:inputType="textCapCharacters"
            android:maxLength="25" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/font_title"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_text_price" />
        <!-- Name field -->
        <EditText
            android:id="@+id/edit_book_price"
            style="@style/EditorFieldStyle"
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/marginRight"
            android:hint="@string/hint_text_price"
            android:inputType="number"
            android:maxLength="3" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/font_title"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_text_quantity" />
        <!-- Name field -->
        <EditText
            android:id="@+id/edit_book_quantity"
            style="@style/EditorFieldStyle"
            android:layout_marginRight="@dimen/marginRight"
            android:hint="@string/hint_text_quantity"
            android:inputType="number"
            android:maxLength="3" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView

            style="@style/font_title"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_text_supplier_name" />
        <!-- Name field -->
        <EditText
            android:id="@+id/edit_supplier_name"
            style="@style/EditorFieldStyle"
            android:layout_marginRight="@dimen/marginRight"
            android:hint="@string/hint_supplier_name"
            android:inputType="textCapWords"
            android:maxLength="25" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView

            style="@style/font_title"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:text="@string/edit_text_suppliers_phone" />
        <!-- Name field -->
        <EditText
            android:id="@+id/edit_supplier_phone"
            style="@style/EditorFieldStyle"
            android:layout_marginRight="@dimen/marginRight"
            android:hint="@string/hint_supplier_phone"
            android:inputType="phone"
            android:maxLength="10" />


    </LinearLayout>
</LinearLayout>

