<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".AddActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_details_height"
        android:layout_margin="@dimen/layouts_margin"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/font_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:text="@string/edit_text_title" />
        <!-- Name field -->
        <TextView
            android:id="@+id/edit_book_title"
            style="@style/EditorFieldStyle"
            android:layout_width="280dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/layouts_margin"
            android:inputType="textCapWords"
            android:maxLength="30"
            android:textAllCaps="false"
            tools:text="THE TITLE OF THE BOOK HERE" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_details_height"
        android:layout_margin="@dimen/layouts_margin"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/font_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="105dp"
            android:text="@string/edit_text_price" />
        <!-- Name field -->
        <TextView
            android:id="@+id/edit_book_price"
            style="@style/EditorFieldStyle"
            android:layout_width="40dp"
            android:layout_gravity="center"
            android:inputType="numberDecimal"
            android:maxLength="3" />

        <TextView
            android:id="@+id/currency_view"
            style="@style/EditorFieldStyle"
            android:layout_width="50dp"
            android:layout_gravity="center"
            android:inputType="numberDecimal"
            android:text="Euro" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_details_height"
        android:layout_margin="@dimen/layouts_margin"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView

            style="@style/font_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="35dp"
            android:text="@string/edit_text_quantity" />

        <ImageButton
            android:id="@+id/quantity_plus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/round_add_circle_black_36" />

        <!-- Name field -->
        <TextView
            android:id="@+id/edit_book_quantity"
            style="@style/EditorFieldStyle"
            android:layout_width="35dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/layouts_margin"
            android:inputType="number" />

        <ImageButton
            android:id="@+id/quantity_minus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/round_remove_circle_black_36" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_details_height"
        android:layout_margin="@dimen/layouts_margin"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/font_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_text_supplier_name" />
        <!-- Name field -->
        <TextView
            android:id="@+id/edit_supplier_name"
            style="@style/EditorFieldStyle"
            android:layout_width="@dimen/edit_field_width"
            android:layout_gravity="center"
            android:layout_marginLeft="80dp"
            android:inputType="textCapWords" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_details_height"
        android:layout_margin="@dimen/layouts_margin"
        android:orientation="horizontal">

        <TextView
            style="@style/font_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_text_suppliers_phone" />
        <!-- Name field -->
        <TextView
            android:id="@+id/edit_supplier_phone"
            style="@style/EditorFieldStyle"
            android:layout_width="120dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:inputType="phone"
            android:maxLength="10" />

        <Button
            android:id="@+id/call_button"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#000000"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="6"
            android:text="Call"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"

        android:orientation="horizontal">


        <Button
            android:id="@+id/edit_button"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_margin="40dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:shadowColor="#000000"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="6"
            android:text="@string/edit_button"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_margin="40dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:shadowColor="#000000"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="6"
            android:text="@string/delete_button"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>








